--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "resume": "file:",
     "three": "^0.168.0"
   },
   "devDependencies": {
