--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^25.0.0",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
