--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "^25.0.0",
-    "next": "14.2.9",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "resume": "file:",
