--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^25.0.0",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.446.0",
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
